# pantograph

./: .clang-format  .gitignore  CMakeLists.txt  ComputerCard.h  LICENSE  README.md  info.yaml  pantograph.cpp  pantograph.h
tests/: Makefile  test_main.cpp  test_pantograph.cpp
